<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"
        android:icon="@drawable/action_help"/>

                <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"
        android:icon="@drawable/action_help"/>
                                <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"
        android:icon="@drawable/action_help"/>
                                                <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"
        android:icon="@drawable/action_help"/>
                
    <item
        android:id="@+id/action_angle"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/angle_unit">
        <menu>
            <item
                android:id="@+id/action_radians"
                android:title="@string/radians"
                />
            <item 
                android:id="@+id/action_degrees"
                android:title="@string/degrees"
                />
        </menu>
        </item>

    
</menu>
